--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
     implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
     implementation 'com.auth0:java-jwt:3.18.2'
+    implementation 'io.springfox:springfox-swagger2:2.9.2'
 }
 
 tasks.named('test') {
