--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ dependencies {
     implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
     implementation 'com.auth0:java-jwt:3.18.2'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
+
+    implementation 'io.springfox:springfox-swagger2:3.0.0'
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'org.springframework.boot:spring-boot-starter-parent:2.7.1'
+    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 }
 
 tasks.named('test') {
